# anydcode

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  pages.yml  release-binaries.yml  release-plz.yml
benches/: detect.rs
examples/: cropdecode.rs  degrade.rs  eanvotedebug.rs  locdebug.rs  qrdebug.rs  scan1ddebug.rs
src/: error.rs  geometry.rs  image.rs  lib.rs  output.rs  pipeline.rs  render.rs  segment.rs  symbol.rs  symbology.rs  traits.rs  transform.rs  wasm.rs
src/codes/: mod.rs
src/codes/appclip/: codec.rs  gf.rs  huffman.rs  mod.rs  scan.rs  svg.rs  tables.rs  url.rs
src/codes/aztec/: decode.rs  encode.rs  gf.rs  highlevel.rs  layout.rs  mod.rs  rune.rs  sample.rs  tables.rs
src/codes/codabar/: mod.rs
src/codes/codablockf/: decode.rs  encode.rs  mod.rs  tables.rs
src/codes/code11/: mod.rs
src/codes/code128/: decode.rs  encode.rs  mod.rs  tables.rs
src/codes/code16k/: decode.rs  encode.rs  mod.rs  tables.rs
src/codes/code39/: mod.rs
src/codes/code49/: decode.rs  encode.rs  mod.rs  tables.rs
src/codes/code93/: mod.rs
src/codes/databar/: decode.rs  encode.rs  expanded.rs  mod.rs  stacked.rs  tables.rs  widths.rs
src/codes/datamatrix/: decode.rs  encode.rs  gf.rs  mod.rs  placement.rs  sample.rs  tables.rs
src/codes/dotcode/: decode.rs  encode.rs  mod.rs  rs.rs  tables.rs
src/codes/dxfilm/: mod.rs
src/codes/ean/: decode.rs  edge.rs  encode.rs  mod.rs  tables.rs
src/codes/gridmatrix/: data.rs  decode.rs  encode.rs  gf.rs  layout.rs  mod.rs  tables.rs
src/codes/hanxin/: decode.rs  encode.rs  gf.rs  matrix.rs  mod.rs  tables.rs
src/codes/itf/: mod.rs
src/codes/maxicode/: decode.rs  encode.rs  gf.rs  mod.rs  tables.rs
src/codes/microqr/: decode.rs  encode.rs  matrix.rs  mod.rs  sample.rs  tables.rs
src/codes/msi/: mod.rs
src/codes/pdf417/: compaction.rs  decode.rs  ec.rs  encode.rs  micro.rs  micro_sample.rs  mod.rs  sample.rs  tables.rs
src/codes/pharmacode/: mod.rs
src/codes/postal/: auspost.rs  imb.rs  japanpost.rs  mailmark.rs  mod.rs  postnet.rs  rm4scc.rs  rs.rs
src/codes/qr/: decode.rs  encode.rs  gf.rs  matrix.rs  mod.rs  sample.rs  tables.rs
src/codes/rmqr/: decode.rs  encode.rs  matrix.rs  mod.rs  sample.rs  tables.rs
src/codes/telepen/: mod.rs
src/codes/twoof5/: mod.rs
src/detect/: finder.rs  grid.rs  mod.rs  tiles.rs
src/imgproc/: binary.rs  components.rs  edges.rs  homography.rs  integral.rs  line.rs  mod.rs  orient.rs  rng.rs  sample.rs  threshold.rs  tps.rs
src/scan1d/: mod.rs  tests.rs
tests/: appclip.rs  aztec.rs  aztec_image.rs  aztec_runes.rs  codabar.rs  codablockf.rs  code11.rs  code128.rs  code16k.rs  code39.rs  code49.rs  code93.rs  databar.rs  databar_expanded.rs  databar_stacked.rs  datamatrix.rs  datamatrix_image.rs  detect.rs  dotcode.rs  dxfilm.rs  ean.rs  gridmatrix.rs  hanxin.rs  harness_curved.rs  harness_image.rs  harness_structural.rs  itf.rs  maxicode.rs  micropdf417.rs  micropdf417_image.rs  microqr.rs  microqr_image.rs  msi.rs  pdf417.rs  pdf417_image.rs  pharmacode.rs  postal.rs  postal_extra.rs  qr_roundtrip.rs  real_world.rs  (+6 more)
web/: index.html
