[package]
name = "anyd"
version = "0.2.0"
edition = "2024"
rust-version = "1.89"
license = "MIT"
description = "From-scratch encoding and decoding of 1D and 2D barcodes with lossless round-trip and live-video detection"
repository = "https://github.com/KarpelesLab/anydcode"
authors = ["Karpelès Lab Inc."]
keywords = ["barcode", "qrcode", "decode", "encode", "scanner"]
categories = ["encoding", "multimedia::images"]
# Keep the published crate lean: the demo page and CI live in the repo, not the crate.
exclude = ["/web", "/.github"]

[features]
# The `anyd` command-line tool. Off by default so the library stays
# dependency-free; enable with `cargo build --features cli`.
cli = ["dep:oxideav-png"]
# Raw wasm32 FFI exports for the browser demo (no wasm-bindgen). Enable only when
# building the demo for `wasm32-unknown-unknown`; it relaxes `forbid(unsafe_code)`
# for the small FFI shim. Adds no dependencies.
wasm = []

[dependencies]
oxideav-png = { version = "0.1.8", optional = true, default-features = false }

[[bin]]
name = "anyd"
path = "src/bin/anyd.rs"
required-features = ["cli"]

[lints.rust]
missing_debug_implementations = "warn"

[lints.clippy]
all = "warn"

[dev-dependencies]

# Dependency-free frame-detector benchmark (std::time only; no criterion).
[[bench]]
name = "detect"
harness = false
